# sdrTrunkTranscription

./: .gitignore  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
misc/: id3tags.py
transcriber/: README.md  transcriber.py
transcription_uploader/: Cargo.toml  README.md
transcription_uploader/proptest-regressions/: tests.txt
transcription_uploader/src/: .env  main.rs  tests.rs
transcription_viewer/: .env.example  .eslintrc.json  .gitignore  README.md  cacheService.js  gen-letsencrypt.sh  gen-localhost-cert.sh  package-lock.json  package.json  remove_dupes.sh  server.js  webSocketService.js
transcription_viewer/__tests__/: setup.js
transcription_viewer/__tests__/middleware/: authMiddleware.test.js
transcription_viewer/__tests__/mocks/: logger.js
transcription_viewer/__tests__/models/: Transcription.test.js
transcription_viewer/models/: LLMInteraction.js  Subscription.js  Talkgroup.js  Transcription.js  User.js
transcription_viewer/public/: manifest.json  sw.js
transcription_viewer/public/css/: mobile.css  style.css  (+1 more)
transcription_viewer/routes/: adminRoutes.js  aiRoutes.js  apiRoutes.js  authRoutes.js  indexRoutes.js  searchRoutes.js  subscriptionRoutes.js
transcription_viewer/services/: emailService.js
transcription_viewer/tests/: webSocketService.test.js
transcription_viewer/utils/: fetchLatestTranscriptions.js  logger.js  talkgroupConfig.js
transcription_viewer/views/: adminLLMInteractions.ejs  adminUsers.ejs  ai.ejs  error.ejs  index.ejs  login.ejs  register.ejs  searchForm.ejs  searchResults.ejs  subscriptions.ejs
(+18 files in other folders)
